--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,4 @@
-@import "variables";
-@import "../../bower_components/bourbon/app/assets/stylesheets/_bourbon.scss";
-@import "../../bower_components/font-awesome/scss/font-awesome.scss";
+@import '_variables';
+@import '../../bower_components/bourbon/app/assets/stylesheets/_bourbon';
+@import '../../bower_components/font-awesome/scss/font-awesome';
+@import '_mixins';
