Fix saas-lint (no undersore needed)

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,4 @@
-@import '_variables';
-@import '../../bower_components/bourbon/app/assets/stylesheets/_bourbon';
+@import 'variables';
+@import '../../bower_components/bourbon/app/assets/stylesheets/bourbon';
 @import '../../bower_components/font-awesome/scss/font-awesome';
-@import '_mixins';
+@import 'mixins';
