--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,3 +7,31 @@ $breakpoints: (
   'wide': 1200px,
   'mega': 1400px
 );
+
+$ms-base: $base-font-size;
+$ms-ratio: $major-third;
+
+$max-width: 1200px
+
+
+/// brand color
+$twitter: #00aced;
+$facebook: #3b5998;
+$googleplus: #dd4b39;
+$pinterest: #cb2027;
+$linkedin: #007bb6;
+$youtube: #b00;
+$vimeo: #1ab7ea;
+$tumblr: #32506d;
+$instagram: #bc2a8d;
+$flickr: #ff0084;
+$dribbble: #ea4c89;
+$quora: #a82400;
+$foursquare: #0072b1;
+$forrst: #5b9a68;
+$vk: #45668e;
+$wordpress: #21759b;
+$stumbleupon: #eb4823;
+$yahoo: #7b0099;
+$blogger: #fb8f3d;
+$soundcloud: #ff3a00;
