--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,3 +2,4 @@
 @import '../../bower_components/bourbon/app/assets/stylesheets/bourbon';
 @import '../../bower_components/font-awesome/scss/font-awesome';
 @import 'mixins';
+@import 'modular-scale';
