big change in gulpfile... new feature

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -35,3 +35,15 @@ $stumbleupon: #eb4823;
 $yahoo: #7b0099;
 $blogger: #fb8f3d;
 $soundcloud: #ff3a00;
+
+
+//shadow
+
+$bs12: rgba(0, 0, 0, .12);
+$bs16: rgba(0, 0, 0, .16);
+$bs19: rgba(0, 0, 0, .19);
+$bs22: rgba(0, 0, 0, .22);
+$bs23: rgba(0, 0, 0, .23);
+$bs24: rgba(0, 0, 0, .24);
+$bs25: rgba(0, 0, 0, .25);
+$bs30: rgba(0, 0, 0, .3);
