--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,4 @@
 @import 'variables';
-@import '../../bower_components/bourbon/app/assets/stylesheets/bourbon';
+@import '../../node_modules/modularscale-sass/stylesheets/_modular-scale.scss';
 @import '../../bower_components/font-awesome/scss/font-awesome';
 @import 'mixins';
-@import 'modular-scale';
