scroll down element, media query, title(hx)

--- a/src/sass/modules/core/core.scss
+++ b/src/sass/modules/core/core.scss
@@ -2,5 +2,7 @@
 @import 'modular-scale/modular-scale';
 @import 'color/color-variable';
 @import 'color-text-bg/color-text-BG';
+@import 'mediaquery/mediaquery';
 @import 'flex-grid/flexgrid';
 @import 'small-element/button';
+@import 'title/title';
