--- a/src/sass/modules/component/element/progressbar/_progressbarPlaceholder.scss
+++ b/src/sass/modules/component/element/progressbar/_progressbarPlaceholder.scss
@@ -41,7 +41,7 @@
     }
 
   &::-webkit-progress-bar {
-    background-color: $input-border;
+    background-color: lighten($input-border, 15%);
     border-radius: em(2);
     box-shadow: 0 em(2) em(5) $progress-shadow inset;
     }
