template title accordeon

--- a/src/sass/modules/template_specific/sidebar/accordeon-box/_boxPlaceholder.scss
+++ b/src/sass/modules/template_specific/sidebar/accordeon-box/_boxPlaceholder.scss
@@ -28,7 +28,7 @@
         .is-open {
             i {
                 &:first-child {
-                    transform: rotate(180);
+                    transform: rotate(180deg);
                 }
             }
 
