--- a/src/sass/modules/core/reset/imports/_normalize.scss
+++ b/src/sass/modules/core/reset/imports/_normalize.scss
@@ -1,3 +1,6 @@
+$normalize-transparent: rgba(0, 0, 0, 0);
+$normalize-mark: #ff0;
+
 /**
  * modified version of normalize.css 3.0.2
  * http://necolas.github.io/normalize.css/
@@ -19,7 +22,7 @@ html {
     // reset box model
     box-sizing: border-box;
     // set transparent tap highlight for iOS
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: $normalize-transparent;
   }
  }
 
@@ -46,11 +49,12 @@ video {
  * Remove excess height in iOS 5 devices.
  */
 
-audio:not([controls]) {
-  display: none;
-  height: 0;
+audio {
+    &:not([controls]) {
+    display: none;
+    height: 0;
+    }
 }
-
 /**
  * Address `[hidden]` styling not present in IE 8/9/10.
  * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
@@ -72,15 +76,11 @@ template {
 
 a {
   background-color: transparent;
-}
 
-/**
- * Improve readability when focused and also mouse hovered in all browsers.
- */
-
-a:active,
-a:hover {
-  outline: 0;
+    &:active,
+    &:hover {
+      outline: 0;
+  }
 }
 
 /**
@@ -92,11 +92,13 @@ a:hover {
  * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
  */
 
-abbr[title] {
-  border-bottom: 1px dotted;
-  @if ($with-flavor) {
-    cursor: help;
-  }
+abbr {
+    &[title] {
+    border-bottom: 1px dotted;
+        @if ($with-flavor) {
+        cursor: help;
+      }
+    }
 }
 
 /**
@@ -114,7 +116,8 @@ strong {
  */
 
 dfn, // 1
-i, em { // 2
+i,
+em { // 2
   font-style: italic;
 }
 
@@ -123,7 +126,7 @@ i, em { // 2
  */
 
 mark {
-  background: #ff0;
+  background: $normalize-mark;
   color: $black;
 }
 
@@ -171,8 +174,10 @@ img {
  * Correct overflow not hidden in IE 9/10/11.
  */
 
-svg:not(:root) {
-  overflow: hidden;
+svg {
+    &:not(:root) {
+    overflow: hidden;
+    }
 }
 
 /**
@@ -241,6 +246,15 @@ textarea {
 
 button {
   overflow: visible;
+
+  &[disabled] {
+      cursor: default;
+  }
+
+  &::-moz-focus-inner {
+      border: 0;
+      padding: 0;
+  }
 }
 
 /**
@@ -264,108 +278,61 @@ select {
  */
 
 button,
-html input[type="button"], // 1
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button; // 2
-  cursor: pointer; // 3
+html {
+    & input {
+        &[type='button'],
+        &[type='reset'],
+        &[type='submit'] {
+          appearance: button; // 2
+          cursor: pointer; // 3
+        }
+    }
 }
 
 /**
  * Re-set default cursor for disabled elements.
  */
 
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-
-/**
- * Remove inner padding and border in Firefox 4+.
- */
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-/**
- * Address Firefox 4+ setting `line-height` on `input` using `!important` in
- * the UA stylesheet.
- */
-
 input {
-  line-height: normal;
+    line-height: normal;
+
+    &[disabled] {
+      cursor: default;
+    }
+
+    &::-moz-focus-inner {
+      border: 0;
+      padding: 0;
+    }
+
+    &[type='checkbox'],
+    &[type='radio'] {
+        box-sizing: border-box;
+        padding: 0;
+    }
+
+    &[type='number' ]{
+        &::-webkit-inner-spin-button,
+        &::-webkit-inner-spin-button {
+            height: auto;
+        }
+    }
+
+    &[type='search'] {
+        -webkit-appearance: none;
+
+        &::-webkit-search-cancel-button,
+        &::-webkit-search-decoration {
+          -webkit-appearance: none;
+        }
+
+    }
 }
-
-/**
- * It's recommended that you don't attempt to style these elements.
- * Firefox's implementation doesn't respect box-sizing, padding, or width.
- *
- * 1. Address box sizing set to `content-box` in IE 8/9/10.
- * 2. Remove excess padding in IE 8/9/10.
- */
-
-input[type="checkbox"],
-input[type="radio"] {
-  @if ($with-flavor) {
-    box-sizing: border-box; // 1
-  }
-  padding: 0; // 2
-}
-
-/**
- * Fix the cursor style for Chrome's increment/decrement buttons. For certain
- * `font-size` values of the `input`, it causes the cursor style of the
- * decrement button to change from `default` to `text`.
- */
-
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
- *    (include `-moz` to future-proof).
- */
-
-input[type="search"] {
-  @if ($with-flavor) {
-    // Override the extra rounded corners on search inputs in iOS
-    // see https://github.com/twbs/bootstrap/issues/11586.
-    -webkit-appearance: none;
-  } @else {
-    -webkit-appearance: textfield; // 1
-    box-sizing: content-box; // 2
-  }
-}
-
-/**
- * Remove inner padding and search cancel button in Safari and Chrome on OS X.
- * Safari (but not Chrome) clips the cancel button when the search input has
- * padding (and `textfield` appearance).
- */
-
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * Remove default vertical scrollbar in IE 8/9/10/11.
- */
 
 textarea {
   overflow: auto;
 }
 
-/**
- * Don't inherit the `font-weight` (applied by a rule above).
- * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
- */
 
 optgroup {
   font-weight: bold;
