--- a/src/sass/modules/component/form/input-group-nosubmit/input-groupnoSubmit.scss
+++ b/src/sass/modules/component/form/input-group-nosubmit/input-groupnoSubmit.scss
@@ -1,6 +1,6 @@
 @import 'inputgroupPlacholderns';
 
 
-.input-group-noSubmit {
-    @extend %input-group-noSubmit;
+.input-group-nosubmit {
+    @extend %input-group-nosubmit;
 }
