--- a/src/sass/modules/component/form/pourcentage/pourcentageinput.scss
+++ b/src/sass/modules/component/form/pourcentage/pourcentageinput.scss
@@ -2,4 +2,4 @@
 @import 'pourcentage';
 @import 'element-modifier';
 
-@warn 'you need to set the right formatter for pourcentage'
+@warn 'you need to set the right formatter for pourcentage';
