--- a/src/sass/modules/component/layout/accordion-icon/_accordion-icon-placeholder.scss
+++ b/src/sass/modules/component/layout/accordion-icon/_accordion-icon-placeholder.scss
@@ -1,37 +1,41 @@
 %accordion-icon {
-    display: block;
     background-color: $accent;
+    display: block;
 
     &> h2 {
-        width: 100%;
-        display: inline-block;
-        height: em(20);
-        position: relative;
-        padding: 0 em(10);
-        box-sizing: border-box;
-        color: $white;
-        font-size: ms(2);
-        text-transform: uppercase;
-        font-weight: bold;
-        cursor: pointer;
-        margin: em(5) 0 0;
-        padding-bottom: em(15);
-        font-family: sans-serif;
+        //sass-lint:disable quotes
         background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='24' height='32' viewBox='0 0 24 32'><polygon points='0,0 0,32 24,16' style='fill:" + $white + " '></polygon></svg>");
+        //sass-lint:enable quotes
         background-origin: content-box;
         background-position: right 0;
         background-repeat: no-repeat;
         background-size: em(10);
+        box-sizing: border-box;
+        color: $white;
+        cursor: pointer;
+        display: inline-block;
+        font-family: sans-serif;
+        font-size: ms(2);
+        font-weight: bold;
+        height: em(20);
+        margin: em(5) 0 0;
+        padding: 0 em(10);
+        padding-bottom: em(15);
+        position: relative;
+        text-transform: uppercase;
+        width: 100%;
     }
 
     & > .col,
-        .row {
-            display: none;
+    .row {
+        display: none;
     }
 
     &.open {
         h2 {
+            //sass-lint:disable quotes
             background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='32' height='24' viewBox='0 0 32 24'><polygon points='0,0 16,24 32,0' style='fill:" + $white + " '></polygon></svg>");
+            //sass-lint:enable quotes
             background-origin: content-box;
             background-position: right center;
             background-repeat: no-repeat;
@@ -39,8 +43,8 @@
         }
 
         & > .col,
-            .row {
-                display: flex;
+        .row {
+            display: flex;
         }
     }
 }
