--- a/src/sass/modules/component/layout/hero-image/_element.scss
+++ b/src/sass/modules/component/layout/hero-image/_element.scss
@@ -15,4 +15,4 @@
 //you can paste an image of 2880px width in the gulp file to create all version
 
 
-@warn 'you need to create your element in hero-image/_element.scss'
+@warn 'you need to create your element in hero-image/_element.scss';
