--- a/src/sass/modules/component/form/input-group-nosubmit/_inputgroupPlacholderns.scss
+++ b/src/sass/modules/component/form/input-group-nosubmit/_inputgroupPlacholderns.scss
@@ -1,8 +1,8 @@
-%input-group-noSubmit {
-    display: flex;
-    width: 100%;
+%input-group-nosubmit {
     align-items: stretch;
     border: 0;
+    display: flex;
+    width: 100%;
 
     & > :first-child {
         border-radius: 0;
@@ -15,8 +15,8 @@
 
     label {
         @extend %label;
-        font-size: ms(0);
         background-color: $input-border;
+        font-size: ms(0);
         padding: em(5) .5em;
     }
 
