--- a/src/sass/modules/core/modular-scale/_calc.scss
+++ b/src/sass/modules/core/modular-scale/_calc.scss
@@ -1,17 +1,13 @@
-@function ms-calc($Value, $Base: $ms-base, $Ratio: $ms-ratio) {
-  
+@function ms-calc($value, $base: $ms-base, $ratio: $ms-ratio) {
+
   // If pow exists use it.
   // It supports non-interger values!
-  @if $MS-pow-exists {
+  @if $ms-pow-exists {
 
     // The formula for figuring out modular scales is:
     // (r^v)*b
-    @return pow($Ratio, $Value) * $Base;
-  }
-
-  // If not, use ms-pow().
-  // Not as fast or capable of non-integer exponents.
-  @else {
-    @return ms-pow($Ratio, $Value) * $Base;
+    @return pow($ratio, $value) * $base;
+  } @else {
+    @return ms-pow($ratio, $value) * $base;
   }
 }
