--- a/src/sass/modules/core/modular-scale/_function-list.scss
+++ b/src/sass/modules/core/modular-scale/_function-list.scss
@@ -1,68 +1,65 @@
 // Outputs a list of values instead of a single value
-@function ms-list($Start: 0, $End: 0, $Bases: $ms-base, $Ratios: $ms-ratio) {
-  
-  // Seed results
-  $Positive-return: ();
-  $Negitive-return: ();
-  $Return: ();
+@function ms-list($start: 0, $end: 0, $bases: $ms-base, $ratios: $ms-ratio) {
 
-  @if $End >= 0 {
+    // Seed results
+  $positive-return: ();
+  $negitive-return: ();
+  $return: ();
+
+  @if $end >= 0 {
     // Generate a list of all possible values
-    $Positive-return: ms-generate-list($End, $Bases, $Ratios);
-    
+    $positive-return: ms-generate-list($end, $bases, $ratios);
+
     // Sort the generated lists
-    $Positive-return: ms-sort-list($Positive-return);
+    $positive-return: ms-sort-list($positive-return);
 
     // Trim list
-    $Trim-list: ();
+    $trim-list: ();
     // If the starting value is a positive number
     // trim the positive return from that
-    @if $Start >= 0 {
-      @for $i from ($Start + 1) through $End + 1 {
-        $Trim-list: join($Trim-list, nth($Positive-return, $i));
+    @if $start >= 0 {
+      @for $i from ($start + 1) through $end + 1 {
+        $trim-list: join($trim-list, nth($positive-return, $i));
+      }
+    } @else {
+      @for $i from 1 through $end + 1 {
+        $trim-list: join($trim-list, nth($positive-return, $i));
       }
     }
-    // If not, then include everything up to the end.
-    @else {
-      @for $i from 1 through $End + 1 {
-        $Trim-list: join($Trim-list, nth($Positive-return, $i));
-      }
-    }
-    $Positive-return: $Trim-list;
-  }
-  
-  // Generate a negitive list
-  @if $Start < 0 {
+    $positive-return: $trim-list;
+}
+
+// Generate a negitive list
+  @if $start < 0 {
     // Generate a list of all possible values
-    $Negitive-return: ms-generate-list($Start, $Bases, $Ratios);
-    
+    $negitive-return: ms-generate-list($start, $bases, $ratios);
+
     // Sort the generated lists
-    $Negitive-return: ms-sort-list($Negitive-return);
-    
+    $negitive-return: ms-sort-list($negitive-return);
+
     // Reverse negitive list results.
-    $MS-new-return: ();
-    @each $i in $Negitive-return {
-      $MS-new-return: join($i, $MS-new-return);
+    $ms-new-return: ();
+    @each $i in $negitive-return {
+      $ms-new-return: join($i, $ms-new-return);
     }
-    $Negitive-return: $MS-new-return;
+    $negitive-return: $ms-new-return;
 
     // Trim list
-    $Trim-list: ();
-    @if $End < 0 {
-      @for $i from abs($End) through (abs($Start) + 2) {
-        $Trim-list: join(nth($Negitive-return, $i), $Trim-list);
+    $trim-list: ();
+    @if $end < 0 {
+      @for $i from abs($end) through (abs($start) + 2) {
+        $trim-list: join(nth($negitive-return, $i), $trim-list);
+      }
+    } @else {
+      @for $i from 2 through (abs($start) + 1) {
+        $trim-list: join(nth($negitive-return, $i), $trim-list);
       }
     }
-    @else {
-      @for $i from 2 through (abs($Start) + 1) {
-        $Trim-list: join(nth($Negitive-return, $i), $Trim-list);
-      }
-    }
-    $Negitive-return: $Trim-list;
+    $negitive-return: $trim-list;
   }
-  
-  // Join both positive and negitive possibilities.
-  $Return: join($Negitive-return, $Positive-return);
 
-  @return $Return;
+  // Join both positive and negitive possibilities.
+  $return: join($negitive-return, $positive-return);
+
+  @return $return;
 }
