--- a/src/sass/modules/core/modular-scale/_sort-list.scss
+++ b/src/sass/modules/core/modular-scale/_sort-list.scss
@@ -1,93 +1,92 @@
 // List sorting via a modified merge-sort algorythmn
 // http://en.wikipedia.org/wiki/Merge_sort
 
-@function ms-merge($A, $B) {
+@function ms-merge($a, $b) {
 
-  $Return: ();
+    $return: ();
 
-  // Some empty lists get passed through
-  // so just pass the other list throguh
-  @if length($A) == 0 {
-    @return $B;
+    // Some empty lists get passed through
+    // so just pass the other list throguh
+    @if length($a) == 0 {
+        @return $b;
   }
 
-  // If lists fit next to each other, just merge them
-  // This helps performance skipping the need to check each value
-  @if nth($A, length($A)) < nth($B, 1) {
-    @return join($A, $B);
+    // If lists fit next to each other, just merge them
+    // This helps performance skipping the need to check each value
+    @if nth($a, length($a)) < nth($b, 1) {
+        @return join($a, $b);
+      }
+    @if nth($b, length($b)) < nth($a, 1) {
+        @return join($b, $a);
   }
-  @if nth($B, length($B)) < nth($A, 1) {
-    @return join($B, $A);
-  }
 
-  // Counters start at 1
-  $A-counter: 1;
-  $B-counter: 1;
+    // Counters start at 1
+    $a-counter: 1;
+    $b-counter: 1;
 
-  // Start looping through all numbers in array
-  @while $A-counter <= length($A) and $B-counter <= length($B) {
+    // Start looping through all numbers in array
+    @while $a-counter <= length($a) and $b-counter <= length($b) {
 
-    // Check if the A value is smaller
-    // Uses or equal to avoid duplicate numbers
-    @if nth($A, $A-counter) <= nth($B, $B-counter) {
-      $Return: join($Return, nth($A, $A-counter));
-      $A-counter: $A-counter + 1;
+        // Check if the A value is smaller
+        // Uses or equal to avoid duplicate numbers
+        @if nth($a, $a-counter) <= nth($b, $b-counter) {
+            $return: join($return, nth($a, $a-counter));
+            $a-counter: $a-counter + 1;
     }
 
-    // Check if the B value is smaller
-    @else if nth($A, $A-counter) > nth($B, $B-counter) {
-      $Return: join($Return, nth($B, $B-counter));
-      $B-counter: $B-counter + 1;
+        // Check if the B value is smaller
+        @else if nth($a, $a-counter) > nth($b, $b-counter) {
+            $return: join($return, nth($b, $b-counter));
+            $b-counter: $b-counter + 1;
     }
   }
 
-  // Run through remainder values in the list
-  @while $A-counter <= length($A) {
-    $Current: nth($A, $A-counter);
-    @if $Current != nth($Return, length($Return)) {
-      $Return: join($Return, $Current);
-    }
-    $A-counter: $A-counter + 1;
-  }
-  @while $B-counter <= length($B) {
-    $Current: nth($B, $B-counter);
-    @if $Current != nth($Return, length($Return)) {
-      $Return: join($Return, $Current);
-    }
-    $B-counter: $B-counter + 1;
-  }
+    // Run through remainder values in the list
+    @while $a-counter <= length($a) {
+        $current: nth($a, $a-counter);
+        @if $current != nth($return, length($return)) {
+            $return: join($return, $current);
+        }
+        $a-counter: $a-counter + 1;
+      }
+    @while $b-counter <= length($b) {
+        $current: nth($b, $b-counter);
+        @if $current != nth($return, length($return)) {
+            $return: join($return, $current);
+        }
+        $b-counter: $b-counter + 1;
+      }
 
-  // Done! return is now sorted and complete
-  @return $Return;
+    // Done! return is now sorted and complete
+    @return $return;
 }
 
 
 
 // Pull it all together
-@function ms-sort-list($Lists) {
+@function ms-sort-list($lists) {
 
-  $Return: ();
+    $return: ();
 
-  @each $List in $Lists {
-    @if $Return == () {
-      $Return: $List;
-    }
-    @else {
-      $Return: ms-merge($List, $Return);
-    }
-  }
-
-  // final cleanup of repeated items
-  $Last: null;
-  $New-list: ();
-  @each $Item in $Return {
-    @if $Item != $Last {
-      $New-list: join($New-list, $Item);
-    }
-    $Last: $Item;
-  }
-  $Return: $New-list;
+    @each $list in $lists {
+        @if $return == () {
+            $return: $list;
+        } @else {
+            $return: ms-merge($list, $return);
+        }
+      }
 
 
-  @return $Return;
+    $last: null;
+    $new-list: ();
+    @each $item in $return {
+        @if $item != $last {
+            $new-list: join($new-list, $item);
+        }
+        $last: $item;
+      }
+    $return: $new-list;
+
+
+  @return $return;
 }
