--- a/src/sass/modules/core/modular-scale/modular-scale.scss
+++ b/src/sass/modules/core/modular-scale/modular-scale.scss
@@ -1,18 +1,18 @@
-@import "modular-scale/ratios";
+@import 'modular-scale/ratios';
 
 $ms-base:  1em      !default;
 $ms-ratio: $major-third  !default;
 $ms-range: null     !default;
 $ms-fluid: true     !default;
 
-@import "tests";
+@import 'tests';
 
-@import "pow";
-@import "calc";
-@import "generate-list";
-@import "sort-list";
-@import "round-px";
-@import "function";
-@import "function-list";
+@import 'pow';
+@import 'calc';
+@import 'generate-list';
+@import 'sort-list';
+@import 'round-px';
+@import 'function';
+@import 'function-list';
 
-@import "respond";
+@import 'respond';
