--- a/src/sass/modules/core/reset/imports/_normalize.scss
+++ b/src/sass/modules/core/reset/imports/_normalize.scss
@@ -1,281 +1,164 @@
 $normalize-transparent: rgba(0, 0, 0, 0);
 $normalize-mark: #ff0;
 
-/**
- * modified version of normalize.css 3.0.2
- * http://necolas.github.io/normalize.css/
- */
 
 $with-flavor: false !default;
 
-/**
- * 1. Set default font family to sans-serif.
- * 2. Prevent iOS text size adjust after orientation change, without disabling
- *    user zoom.
- */
 
 html {
-  font-family: sans-serif; // 1
-  -ms-text-size-adjust: 100%; // 2
-  -webkit-text-size-adjust: 100%; // 2
-  @if ($with-flavor) {
-    // reset box model
-    box-sizing: border-box;
-    // set transparent tap highlight for iOS
-    -webkit-tap-highlight-color: $normalize-transparent;
+    //sass-lint:disable no-vendor-prefixes
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    //sass-lint:enable no-vendor-prefixes
+    font-family: sans-serif;
+
+    @if ($with-flavor) {
+        //sass-lint:disable no-vendor-prefixes
+        -webkit-tap-highlight-color: $normalize-transparent;
+        //sass-lint:enable no-vendor-prefixes
+        box-sizing: border-box;
   }
  }
-
-/**
- * HTML5 display definitions
- * =============================================================================
- */
-
-/**
- * 1. Correct `inline-block` display not defined in IE 8/9.
- * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
- */
 
 audio,
 canvas,
 progress,
 video {
-  display: inline-block; // 1
-  vertical-align: baseline; // 2
+    display: inline-block;
+    vertical-align: baseline;
 }
 
-/**
- * Prevent modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS 5 devices.
- */
 
 audio {
     &:not([controls]) {
-    display: none;
-    height: 0;
+        display: none;
+        height: 0;
     }
 }
-/**
- * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
- */
 
 [hidden],
 template {
-  display: none;
+    display: none;
 }
 
-/**
- * Links
- * =============================================================================
- */
-
-/**
- * Remove the gray background color from active links in IE 10.
- */
 
 a {
-  background-color: transparent;
+    background-color: transparent;
 
     &:active,
     &:hover {
-      outline: 0;
+        outline: 0;
   }
 }
 
-/**
- * Text-level semantics
- * =============================================================================
- */
-
-/**
- * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
- */
 
 abbr {
     &[title] {
-    border-bottom: 1px dotted;
+        border-bottom: 1px dotted;
+
         @if ($with-flavor) {
-        cursor: help;
+            cursor: help;
       }
     }
 }
 
-/**
- * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
- */
-
 b,
 strong {
-  font-weight: bold;
+    font-weight: bold;
 }
 
-/**
- * 1. Address styling not present in Safari and Chrome.
- * 2. Set previously resetted italic font-style
- */
 
-dfn, // 1
+dfn,
 i,
-em { // 2
-  font-style: italic;
+em {
+    font-style: italic;
 }
 
-/**
- * Address styling not present in IE 8/9.
- */
 
 mark {
-  background: $normalize-mark;
-  color: $black;
+    background: $normalize-mark;
+    color: $black;
 }
 
-/**
- * Address inconsistent and variable font size in all browsers.
- */
 
 small {
-  font-size: 80%;
+    font-size: 80%;
 }
-
-/**
- * Prevent `sub` and `sup` affecting `line-height` in all browsers.
- */
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
 }
 
 sup {
-  top: -.5em;
+    top: -.5em;
 }
 
 sub {
-  bottom: -.25em;
+    bottom: -.25em;
 }
 
-/**
- * Embedded content
- * =============================================================================
- */
-
-/**
- * Remove border when inside `a` element in IE 8/9/10.
- */
 
 img {
-  border: 0;
+    border: 0;
 }
-
-/**
- * Correct overflow not hidden in IE 9/10/11.
- */
 
 svg {
     &:not(:root) {
-    overflow: hidden;
+        overflow: hidden;
     }
 }
 
-/**
- * Grouping content
- * =============================================================================
- */
-
-/**
- * Address differences between Firefox and other browsers.
- */
-
 hr {
-  box-sizing: content-box;
-  height: 0;
+    box-sizing: content-box;
+    height: 0;
 }
-
-/**
- * Contain overflow in all browsers.
- */
 
 pre {
-  overflow: auto;
+    overflow: auto;
 }
-
-/**
- * Address odd `em`-unit font size rendering in all browsers.
- */
 
 code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+    font-family: monospace, monospace;
 }
 
-/**
- * Forms
- * =============================================================================
- */
-
-/**
- * Known limitation: by default, Chrome and Safari on OS X allow very limited
- * styling of `select`, unless a `border` property is set.
- */
-
-/**
- * 1. Correct color not being inherited.
- *    Known issue: affects color of disabled elements.
- * 2. Correct font properties not being inherited.
- * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
- */
 
 button,
 input,
 optgroup,
 select,
 textarea {
-  color: inherit; // 1
-  font: inherit; // 2
-  margin: 0; // 3
+    color: inherit;
+    font: inherit;
+    margin: 0;
 }
 
-/**
- * Address `overflow` set to `hidden` in IE 8/9/10/11.
- */
 
 button {
-  overflow: visible;
+    overflow: visible;
 
-  &[disabled] {
-      cursor: default;
+    &[disabled] {
+        cursor: default;
   }
 
-  &::-moz-focus-inner {
-      border: 0;
-      padding: 0;
+    //sass-lint:disable no-vendor-prefixes
+    &::-moz-focus-inner {
+        border: 0;
+        padding: 0;
   }
 }
-
-/**
- * Address inconsistent `text-transform` inheritance for `button` and `select`.
- * All other form control elements do not inherit `text-transform` values.
- * Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
- * Correct `select` style inheritance in Firefox.
- */
+//sass-line:enable no-vendor-prefixes
 
 button,
 select {
-  text-transform: none;
+    text-transform: none;
 }
 
-/**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
- * 2. Correct inability to style clickable `input` types in iOS.
- * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and others.
- */
 
 button,
 html {
@@ -283,31 +166,22 @@ html {
         &[type='button'],
         &[type='reset'],
         &[type='submit'] {
-          appearance: button; // 2
-          cursor: pointer; // 3
+            appearance: button;
+            cursor: pointer;
         }
     }
 }
-
-/**
- * Re-set default cursor for disabled elements.
- */
 
 input {
     line-height: normal;
 
     &[disabled] {
-      cursor: default;
+        cursor: default;
     }
 
+    //sass-lint:disable no-vendor-prefixes
     &::-moz-focus-inner {
-      border: 0;
-      padding: 0;
-    }
-
-    &[type='checkbox'],
-    &[type='radio'] {
-        box-sizing: border-box;
+        border: 0;
         padding: 0;
     }
 
@@ -323,17 +197,23 @@ input {
 
         &::-webkit-search-cancel-button,
         &::-webkit-search-decoration {
-          -webkit-appearance: none;
+            -webkit-appearance: none;
         }
+        //sass-lint:enable no-vendor-prefixes
 
+        &[type='checkbox'],
+        &[type='radio'] {
+            box-sizing: border-box;
+            padding: 0;
+        }
     }
 }
 
 textarea {
-  overflow: auto;
+    overflow: auto;
 }
 
 
 optgroup {
-  font-weight: bold;
+    font-weight: bold;
 }
