--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,15 +1,28 @@
-@import 'variables';
-@import '../../bower_components/font-awesome/scss/font-awesome';
-@import 'mixins';
 @import 'modules/core/core';
 @import 'modules/component/layout/accordion-icon/accordion-icon';
+@import 'modules/component/layout/accordion-normal/accordion';
+@import 'modules/component/layout/hero-image/hero';
+@import 'modules/component/layout/scrolldown/scrolldown';
+@import 'modules/component/layout/stickyheader/stickyheader';
 @import 'modules/component/form/formElement';
+@import 'modules/component/form/currencyInput/currencyinput';
 @import 'modules/component/form/pourcentage/pourcentageinput';
 @import 'modules/component/form/radiobutton/radiobutton';
 @import 'modules/component/form/checkbox/checkbox';
 @import 'modules/component/form/dropdown/dropdown';
+@import 'modules/component/form/required/required';
 @import 'modules/component/form/input-group-nosubmit/input-groupnoSubmit';
+@import 'modules/component/form/input-group/input-group';
 @import 'modules/component/element/progressbar/progressbar';
 @import 'modules/component/form/textarea/textarea';
 @import 'modules/component/element/list/list';
 @import 'modules/component/element/tooltip/tooltip';
+@import 'modules/component/element/blockquote/blockquote';
+@import 'modules/component/element/modal/modal';
+@import 'modules/template_specific/accordeon/accordeon';
+@import 'modules/template_specific/infobox/infobox';
+@import 'modules/template_specific/title/title';
+@import 'modules/template_specific/sidebar/accordeon-box/accordeon-box';
+@import 'modules/template_specific/sidebar/filter-button/filter-button';
+@import 'modules/template_specific/sidebar/iconlist/iconlist';
+@import 'modules/template_specific/sidebar/intertitre/intertitre';
