--- a/src/sass/modules/component/form/required/required.scss
+++ b/src/sass/modules/component/form/required/required.scss
@@ -2,10 +2,10 @@
     position: relative;
 
     &::after {
-        color: $star-red;
+        color: $alert;
         content: '*';
         display: inline-block;
-        font-family: $normal;
+        font-family: sans-serif;
         font-size: ms(-1);
         height: em(11);
         width: em(10);
