--- a/src/sass/modules/core/core.scss
+++ b/src/sass/modules/core/core.scss
@@ -1,9 +1,9 @@
 @import 'reset/reset';
 @import 'pixeltoem/pixeltoem';
-@import 'modular-scale/modular-scale';
 @import 'color/color-variable';
 @import 'color-text-bg/color-text-BG';
 @import 'mediaquery/mediaquery';
+@import 'modular-scale/modular-scale';
 @import 'flex-grid/flexgrid';
-@import 'small-element/button';
+@import 'button/button';
 @import 'title/title';
