--- a/src/sass/modules/core/reset/reset.scss
+++ b/src/sass/modules/core/reset/reset.scss
@@ -1,5 +1,3 @@
-$with-flavor: true;
-
-@import 'reset-and-normalize';
-
+@import 'imports/reset';
+@import 'imports/normalize';
 @import 'imports/flavor';
