--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -654,6 +654,7 @@ h6 {
   display: block; }
   .row.accordion-icon > h2,
   .col.accordion-icon > h2, .accordeon > h2 {
+    background-color: transparent;
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='24' height='32' viewBox='0 0 24 32'><polygon points='0,0 0,32 24,16' style='fill:#fff '></polygon></svg>");
     background-origin: content-box;
     background-position: right 0;
@@ -722,66 +723,6 @@ h6 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
-
-.scrolldown {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  -webkit-box-align: space-between;
-  -ms-flex-align: space-between;
-  align-items: space-between;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-animation: pulse 1s 5;
-  animation: pulse 1s 5;
-  -webkit-animation-delay: 3s;
-  animation-delay: 3s;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  bottom: 1.625em;
-  height: 2.5em;
-  left: 50%;
-  margin-bottom: 1.25em;
-  opacity: 0;
-  position: absolute;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  width: auto; }
-  .scrolldown .svg {
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='12' height='18' viewBox='0 0 12 18'><path  style='fill:#fff d='M5.6334507,17.6271186 C2.5222725,17.6271186 0,15.1609287 0,12.1186441 L0,5.5087041 C0,2.46618997 2.5222725,0 5.6334507,0 C8.7443942,0 11.2666667,2.46618997 11.2666667,5.5087041 L11.2666667,12.1186441 C11.2666667,15.1609287 8.7443942,17.6271186 5.6334507,17.6271186 L5.6334507,17.6271186 Z M6.4131167,4.18621116 C6.4131167,3.57798376 5.9477167,3.08474576 5.3733333,3.08474576 C4.79895,3.08474576 4.3333333,3.57798376 4.3333333,4.18621116 L4.3333333,6.38960099 C4.3333333,6.99782839 4.79895,7.49152542 5.3733333,7.49152542 C5.9477167,7.49152542 6.4131167,6.99782839 6.4131167,6.38960099 L6.4131167,4.18621116 Z'/></svg>");
-    background-origin: content-box;
-    background-repeat: no-repeat;
-    background-size: 0.75em 1.125em;
-    height: 100%;
-    overflow: visible;
-    width: auto; }
-  .scrolldown p {
-    color: #fff;
-    font-size: 0.64em; }
-
-@-webkit-keyframes pulse {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-
-@keyframes pulse {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
 
 .row.sticky {
   display: -webkit-box;
@@ -1165,7 +1106,7 @@ progress {
     background-size: 40px 40px, 100% 100%, 100% 100%;
     border-radius: 2px; }
   progress::-webkit-progress-bar {
-    background-color: #f2f2f2;
+    background-color: #fff;
     border-radius: 0.125em;
     -webkit-box-shadow: 0 0.125em 0.3125em #ccc inset;
     box-shadow: 0 0.125em 0.3125em #ccc inset; }
@@ -1534,6 +1475,7 @@ blockquote {
   display: block; }
   .row.accordion-icon > h2,
   .col.accordion-icon > h2, .accordeon > h2 {
+    background-color: transparent;
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='24' height='32' viewBox='0 0 24 32'><polygon points='0,0 0,32 24,16' style='fill:#fff '></polygon></svg>");
     background-origin: content-box;
     background-position: right 0;
