--- a/src/sass/modules/component/element/progressbar/_progressbarPlaceholder.scss
+++ b/src/sass/modules/component/element/progressbar/_progressbarPlaceholder.scss
@@ -48,7 +48,7 @@
     //sass-lint:disable no-vendor-prefixes
     &::-webkit-progress-bar {
         //sass-lint:enable no-vendor-prefixes
-        background-color: lighten($input-border, 15%);
+        background-color: $white;
         border-radius: em(2);
         box-shadow: 0 em(2) em(5) $progress-shadow inset;
     }
