--- a/src/sass/modules/component/layout/accordion-normal/_accordion-placeholder.scss
+++ b/src/sass/modules/component/layout/accordion-normal/_accordion-placeholder.scss
@@ -3,6 +3,7 @@
     display: block;
 
     &> h2 {
+        background-color: transparent;
         box-sizing: border-box;
         color: $white;
         display: inline-block;
@@ -16,6 +17,7 @@
         position: relative;
         text-transform: uppercase;
         width: 100%;
+
     }
 
     & > .col,
