--- a/src/sass/modules/component/form/dropdown/_element-modifier.scss
+++ b/src/sass/modules/component/form/dropdown/_element-modifier.scss
@@ -1,3 +1,9 @@
-select {
-    @extend %select;
+.col {
+    &.dropdown {
+        @extend %dropdown;
+
+        select {
+            @extend %select;
+        }
+    }
 }
