--- a/src/sass/modules/component/form/pourcentage/_pourcentage.scss
+++ b/src/sass/modules/component/form/pourcentage/_pourcentage.scss
@@ -1,13 +1,12 @@
 %pourcent {
     @extend %currency;
-    position: relative;
 
 
-    &::after {
-        content: '%';
+    &>shortlabel {
+        &::after {
+            content: '%';
+        }
+
     }
 
-    input {
-        padding-right: em(35);
-    }
 }
