--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -349,8 +349,31 @@ textarea {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-top: 0.25em;
-  width: 100%; }
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 100%;
+  flex: 1 1 100%;
+  margin-top: 0.625em; }
+
+.row-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 100%;
+  flex: 1 1 100%;
+  padding: 0 0.25em; }
 
 .col {
   display: -webkit-box;
@@ -643,10 +666,10 @@ h5 {
       font-size: 1.25em; } }
 
 h6 {
-  font-size: 1em; }
+  font-size: 0.8em; }
   @media (min-width: 768px) {
     h6 {
-      font-size: 1em; } }
+      font-size: 0.8em; } }
 
 .row.accordion-icon,
 .col.accordion-icon, .accordeon {
@@ -693,12 +716,13 @@ h6 {
     display: -ms-flexbox;
     display: flex; }
 
-.row .accordion,
-.col .accordion {
+.row.accordion,
+.col.accordion {
   background-color: #24a6d4;
   display: block; }
-  .row .accordion > h2,
-  .col .accordion > h2 {
+  .row.accordion > h2,
+  .col.accordion > h2 {
+    background-color: transparent;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     color: #fff;
@@ -713,13 +737,13 @@ h6 {
     position: relative;
     text-transform: uppercase;
     width: 100%; }
-  .row .accordion > .col,
-  .col .accordion > .col, .row .accordion .row,
-  .col .accordion .row {
+  .row.accordion > .col,
+  .col.accordion > .col, .row.accordion .row,
+  .col.accordion .row {
     display: none; }
-  .row .open.accordion > .col,
-  .col .open.accordion > .col, .row .open.accordion .row,
-  .col .open.accordion .row {
+  .open.row.accordion > .col,
+  .open.col.accordion > .col, .open.row.accordion .row,
+  .open.col.accordion .row {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
@@ -757,7 +781,7 @@ h6 {
   .visible.row.sticky {
     top: 0; }
 
-input, .col.currency input, .col.pourcent input, select, .input-group-nosubmit input, .input-group input {
+input, .col.currency input, .pourcent input, .pourcent input:focus, .col.dropdown select, .input-group-nosubmit input, .input-group input {
   border: 1px solid #cccccc;
   border-radius: 0;
   -webkit-box-shadow: inset 0 1px 2px rgba(23, 23, 23, 0.1);
@@ -767,6 +791,7 @@ input, .col.currency input, .col.pourcent input, select, .input-group-nosubmit i
   flex: 1 1 26px;
   font-family: sans-serif;
   font-size: 1em;
+  height: 1.625em;
   margin: 0;
   min-width: 0;
   padding: 0 .5em;
@@ -776,25 +801,25 @@ input, .col.currency input, .col.pourcent input, select, .input-group-nosubmit i
   transition: box-shadow .3s, -webkit-box-shadow .3s;
   white-space: nowrap;
   width: 100%; }
-  input:focus, .col.currency input:focus, .col.pourcent input:focus, select:focus {
+  input:focus, .col.currency input:focus, .col.dropdown select:focus {
     border: 1px solid #a6a6a6;
     -webkit-box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
     box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
     outline: none; }
-  input::-webkit-input-placeholder, .col.currency input::-webkit-input-placeholder, .col.pourcent input::-webkit-input-placeholder, select::-webkit-input-placeholder, .input-group-nosubmit input::-webkit-input-placeholder, .input-group input::-webkit-input-placeholder {
+  input::-webkit-input-placeholder, .col.currency input::-webkit-input-placeholder, .pourcent input::-webkit-input-placeholder, .pourcent input:focus::-webkit-input-placeholder, .col.dropdown select::-webkit-input-placeholder, .input-group-nosubmit input::-webkit-input-placeholder, .input-group input::-webkit-input-placeholder {
     font-family: sans-serif;
     font-style: italic; }
-  input:-ms-input-placeholder, .col.currency input:-ms-input-placeholder, .col.pourcent input:-ms-input-placeholder, select:-ms-input-placeholder, .input-group-nosubmit input:-ms-input-placeholder, .input-group input:-ms-input-placeholder {
+  input:-ms-input-placeholder, .col.currency input:-ms-input-placeholder, .pourcent input:-ms-input-placeholder, .pourcent input:focus:-ms-input-placeholder, .col.dropdown select:-ms-input-placeholder, .input-group-nosubmit input:-ms-input-placeholder, .input-group input:-ms-input-placeholder {
     font-family: sans-serif;
     font-style: italic; }
-  input::placeholder, .col.currency input::placeholder, .col.pourcent input::placeholder, select::placeholder, .input-group-nosubmit input::placeholder, .input-group input::placeholder {
+  input::placeholder, .col.currency input::placeholder, .pourcent input::placeholder, .pourcent input:focus::placeholder, .col.dropdown select::placeholder, .input-group-nosubmit input::placeholder, .input-group input::placeholder {
     font-family: sans-serif;
     font-style: italic; }
-  input:disabled, .col.currency input:disabled, .col.pourcent input:disabled, select:disabled {
+  input:disabled, .col.currency input:disabled, .pourcent input:disabled:focus, .col.dropdown select:disabled {
     background-color: #e9e9e9;
     color: #1a1a1a; }
 
-label, .col.currency label, .col.pourcent label, .input-group-nosubmit label, .input-group label {
+.col.currency > shortlabel, .pourcent > shortlabel, .radio .shortlabel, .radio > input[type='radio'] + .shortlabel, .checkbox .shortlabel, .checkbox > input[type='checkbox'] + label, .input-group-nosubmit .shortlabel, .input-group .shortlabel, label {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -802,9 +827,9 @@ label, .col.currency label, .col.pourcent label, .input-group-nosubmit label, .i
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 100%;
+  flex: 1 0 100%;
   font-family: sans-serif;
   font-size: 0.8em;
   margin: 0;
@@ -815,104 +840,99 @@ label, .col.currency label, .col.pourcent label, .input-group-nosubmit label, .i
   text-align: left;
   white-space: nowrap; }
 
-.col.currency, .col.pourcent {
+.col.currency > shortlabel, .pourcent > shortlabel, .radio .shortlabel, .radio > input[type='radio'] + .shortlabel, .checkbox .shortlabel, .checkbox > input[type='checkbox'] + label, .input-group-nosubmit .shortlabel, .input-group .shortlabel {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto; }
+
+.col.currency, .pourcent {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  -webkit-box-align: space-between;
-  -ms-flex-align: space-between;
-  align-items: space-between;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  position: relative; }
-  .col.currency::after, .col.pourcent::after {
-    background-color: #24a6d4;
-    color: #fff;
-    content: '$';
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    font-family: sans-serif;
-    height: 1.125em;
-    padding: 0.1875em 0.5em;
-    position: absolute;
-    right: 0.3125em;
-    top: 1.0625em; }
-  .col.currency label, .col.pourcent label {
-    padding-top: 0; }
-  .col.currency input, .col.pourcent input {
-    height: 1.4375em;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  border: 0;
+  display: flex;
+  width: 100%; }
+  .col.currency input, .pourcent input {
+    height: 1.625em;
     margin-left: 0;
-    margin-right: 1.0625em;
-    padding-right: 1.875em;
+    margin-right: 0;
+    padding-right: 0.125em;
     text-align: right;
     width: 100%; }
-    .col.currency input::-webkit-inner-spin-button, .col.pourcent input::-webkit-inner-spin-button, .col.currency input::-webkit-outer-spin-button, .col.pourcent input::-webkit-outer-spin-button {
+    .col.currency input::-webkit-inner-spin-button, .pourcent input::-webkit-inner-spin-button, .col.currency input::-webkit-outer-spin-button, .pourcent input::-webkit-outer-spin-button {
       -webkit-appearance: none;
       appearance: none;
       margin: 0; }
+  .col.currency > shortlabel, .pourcent > shortlabel {
+    background-color: #24a6d4;
+    color: #fff;
+    display: block;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 1.25em;
+    flex: 0 0 1.25em;
+    font-family: sans-serif;
+    padding: 0.3125em 0;
+    text-align: center; }
+    .col.currency > shortlabel::after, .pourcent > shortlabel::after {
+      content: '$'; }
 
-.col.currency, .col.pourcent {
+.col.currency, .pourcent {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  -webkit-box-align: space-between;
-  -ms-flex-align: space-between;
-  align-items: space-between;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  position: relative; }
-  .col.currency::after, .col.pourcent::after {
-    background-color: #24a6d4;
-    color: #fff;
-    content: '$';
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    font-family: sans-serif;
-    height: 1.125em;
-    padding: 0.1875em 0.5em;
-    position: absolute;
-    right: 0.3125em;
-    top: 1.0625em; }
-  .col.currency label, .col.pourcent label {
-    padding-top: 0; }
-  .col.currency input, .col.pourcent input {
-    height: 1.4375em;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  border: 0;
+  display: flex;
+  width: 100%; }
+  .col.currency input, .pourcent input {
+    height: 1.625em;
     margin-left: 0;
-    margin-right: 1.0625em;
-    padding-right: 1.875em;
+    margin-right: 0;
+    padding-right: 0.125em;
     text-align: right;
     width: 100%; }
-    .col.currency input::-webkit-inner-spin-button, .col.pourcent input::-webkit-inner-spin-button, .col.currency input::-webkit-outer-spin-button, .col.pourcent input::-webkit-outer-spin-button {
+    .col.currency input::-webkit-inner-spin-button, .pourcent input::-webkit-inner-spin-button, .col.currency input::-webkit-outer-spin-button, .pourcent input::-webkit-outer-spin-button {
       -webkit-appearance: none;
       appearance: none;
       margin: 0; }
+  .col.currency > shortlabel, .pourcent > shortlabel {
+    background-color: #24a6d4;
+    color: #fff;
+    display: block;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 1.25em;
+    flex: 0 0 1.25em;
+    font-family: sans-serif;
+    padding: 0.3125em 0;
+    text-align: center; }
+    .col.currency > shortlabel::after, .pourcent > shortlabel::after {
+      content: '$'; }
 
-.col.pourcent {
-  position: relative; }
-  .col.pourcent::after {
-    content: '%'; }
-  .col.pourcent input {
-    padding-right: 2.1875em; }
+.pourcent > shortlabel::after {
+  content: '%'; }
 
 .radio {
   display: -webkit-box;
@@ -930,16 +950,14 @@ label, .col.currency label, .col.pourcent label, .input-group-nosubmit label, .i
   -webkit-box-pack: start;
   -ms-flex-pack: start;
   justify-content: flex-start; }
-  .radio label {
+  .radio .shortlabel {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     padding-left: 0.9375em; }
-    .radio label:first-of-type {
-      padding-left: 0; }
   .radio > input[type='radio'] {
     display: none; }
-    .radio > input[type='radio'] + label {
+    .radio > input[type='radio'] + .shortlabel {
       background: #fff;
       border: 1px solid #cccccc;
       border-radius: 50%;
@@ -953,7 +971,7 @@ label, .col.currency label, .col.pourcent label, .input-group-nosubmit label, .i
       -webkit-transition: background-color .1s ease-in-out;
       transition: background-color .1s ease-in-out;
       width: 1em; }
-      .radio > input[type='radio'] + label::before {
+      .radio > input[type='radio'] + .shortlabel::before {
         color: #fff;
         content: '•';
         font-size: 0;
@@ -984,12 +1002,12 @@ label, .col.currency label, .col.pourcent label, .input-group-nosubmit label, .i
   -webkit-box-pack: start;
   -ms-flex-pack: start;
   justify-content: flex-start; }
-  .checkbox label {
+  .checkbox .shortlabel {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     padding-left: 0.9375em; }
-    .checkbox label:first-of-type {
+    .checkbox .shortlabel:first-of-type {
       padding-left: 0; }
   .checkbox > input[type='checkbox'] {
     display: none; }
@@ -1022,7 +1040,7 @@ label, .col.currency label, .col.pourcent label, .input-group-nosubmit label, .i
     .checkbox > input[type='checkbox']:disabled + label {
       background-color: #e9e9e9; }
 
-select {
+.col.dropdown select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -1032,6 +1050,23 @@ select {
   background-position: right center;
   background-repeat: no-repeat;
   background-size: 0.5625em 0.375em; }
+
+.col.dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
 
 .required {
   position: relative; }
@@ -1045,19 +1080,29 @@ select {
     width: 0.625em; }
 
 .input-group-nosubmit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-align: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   border: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%; }
   .input-group-nosubmit > :first-child {
     border-radius: 0; }
   .input-group-nosubmit > :last-child {
     border-radius: 0; }
-  .input-group-nosubmit label {
+  .input-group-nosubmit .shortlabel {
     background-color: #cccccc;
     font-size: 1em;
     padding: 0.3125em 0.5em; }
@@ -1066,26 +1111,42 @@ select {
     height: auto; }
 
 .input-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-align: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   border: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%; }
   .input-group > :first-child {
     border-radius: 0; }
   .input-group > :last-child {
     border-radius: 0; }
-  .input-group label {
+  .input-group .shortlabel {
     background-color: #cccccc;
-    font-size: 1.25em;
+    font-size: 1em;
     padding: 0.3125em 0.5em; }
   .input-group input {
     border-left: 0;
     border-right: 0;
     height: auto; }
+    .input-group input[type='submit'] {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+      flex: 0 0 auto;
+      font-size: 1em;
+      padding: 0 .5em; }
 
 progress {
   -webkit-appearance: none;
@@ -1249,30 +1310,30 @@ textarea {
         border-right: 0; }
   .list .listbody {
     display: block;
-    height: 1.8125em;
-    margin-top: 1.625em;
+    height: 2.0625em;
     overflow-y: auto;
+    padding-top: 1em;
     width: 100%; }
     .list .listbody.line1 {
-      height: 1.8125em; }
+      height: 2.0625em; }
     .list .listbody.line2 {
-      height: 3.75em; }
+      height: 4em; }
     .list .listbody.line3 {
-      height: 5.375em; }
+      height: 6em; }
     .list .listbody.line4 {
-      height: 7.125em; }
+      height: 8em; }
     .list .listbody.line5 {
-      height: 8.875em; }
+      height: 10em; }
     .list .listbody.line6 {
-      height: 10.375em; }
+      height: 12em; }
     .list .listbody.line7 {
-      height: 12.125em; }
+      height: 14em; }
     .list .listbody.line8 {
-      height: 13.875em; }
+      height: 16em; }
     .list .listbody.line9 {
-      height: 15.5em; }
+      height: 18em; }
     .list .listbody.line10 {
-      height: 17.375em; }
+      height: 20em; }
     .list .listbody .row {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -1514,11 +1575,10 @@ blockquote {
     display: -ms-flexbox;
     display: flex; }
 
-h2, .accordeon > h2 {
+.title, .accordeon > h2 {
   background-color: #e9e9e9;
   color: #444;
   height: 3.5em;
-  padding: 1em;
   text-transform: none;
   width: 100%; }
 
@@ -1588,11 +1648,10 @@ h2, .accordeon > h2 {
   .col.infobox .labeltxt {
     color: #24a6d4; }
 
-h2, .accordeon > h2 {
+.title, .accordeon > h2 {
   background-color: #e9e9e9;
   color: #444;
   height: 3.5em;
-  padding: 1em;
   text-transform: none;
   width: 100%; }
 
