--- a/src/sass/modules/component/form/_input.scss
+++ b/src/sass/modules/component/form/_input.scss
@@ -5,10 +5,10 @@
     flex: 1 1 26px;
     font-family: sans-serif;
     font-size: ms(0);
+    height: em(26);
     margin: 0;
     min-width: 0;
     padding: 0 .5em;
-
     transition: box-shadow .3s;
     white-space: nowrap;
     width: 100%;
