--- a/src/sass/modules/component/form/checkbox/_checkboxPlaceholder.scss
+++ b/src/sass/modules/component/form/checkbox/_checkboxPlaceholder.scss
@@ -1,7 +1,8 @@
 %checkbox {
     @include flexbox(row, wrap, flex-start, flex-start);
 
-    label {
+    .shortlabel {
+        @extend %shortlabel;
         display: flex;
         padding-left: em(15);
 
@@ -16,6 +17,7 @@
             display: none;
 
             + label {
+                @extend %shortlabel;
                 background: $white;
                 border: 1px solid $input-border;
                 border-radius: em(4);
