--- a/src/sass/modules/component/form/input-group-nosubmit/_inputgroupPlacholderns.scss
+++ b/src/sass/modules/component/form/input-group-nosubmit/_inputgroupPlacholderns.scss
@@ -1,8 +1,10 @@
 %input-group-nosubmit {
-    align-items: stretch;
+    @include flexbox(row, wrap, flex-start, stretch);
     border: 0;
     display: flex;
     width: 100%;
+
+
 
     & > :first-child {
         border-radius: 0;
@@ -13,8 +15,8 @@
 
     }
 
-    label {
-        @extend %label;
+    .shortlabel {
+        @extend %shortlabel;
         background-color: $input-border;
         font-size: ms(0);
         padding: em(5) .5em;
