--- a/src/sass/modules/core/flex-grid/_row-col-element.scss
+++ b/src/sass/modules/core/flex-grid/_row-col-element.scss
@@ -12,7 +12,7 @@
 
 .col {
     @include flexbox(column, wrap, flex-start, flex-start);
-    flex: 1 1 100%;
+    flex: 1 1 auto;
     padding: 0 em(4);
 
 
