--- a/src/sass/modules/component/form/required/required.scss
+++ b/src/sass/modules/component/form/required/required.scss
@@ -6,8 +6,9 @@
         content: '*';
         display: inline-block;
         font-family: sans-serif;
-        font-size: ms(-1);
+        font-size: ms(1);
         height: em(11);
+        position: absolute;
         width: em(10);
     }
 }
